# kompython

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
kube/: deployment.yaml  service.yaml
src/: api.py  cli.py  config.py  database.py  factory.py  llm_client.py  models.py  settings_data.py
src/parsers/: universal_parser.py
src/services/: llm_service.py  selenium_service.py  source_service.py
src/test/: conftest.py  parsing_results.json  test_e2e.py  test_fastapi.py  test_llm.py  test_scraper.py
src/test/selres/: ampm-store_ru_2026-01-29_13-22-21.html  ampm-store_ru_2026-01-29_15-38-48.html  ampm-store_ru_2026-01-29_15-39-40.html  ampm-store_ru_2026-01-29_15-40-28.html  ampm-store_ru_2026-01-29_17-22-32.html  ampm-store_ru_2026-01-29_17-23-31.html  ampm-store_ru_2026-01-29_17-24-22.html  ampm-store_ru_2026-01-29_18-02-14.html  ampm-store_ru_2026-01-29_18-03-09.html  ampm-store_ru_2026-01-29_18-03-52.html  ampm-store_ru_2026-01-29_20-44-31.html  ampm-store_ru_2026-01-29_20-45-23.html  ampm-store_ru_2026-01-29_20-46-06.html  ampm-store_ru_2026-01-30_10-31-16.html  ampm-store_ru_2026-01-30_10-32-18.html  ampm-store_ru_2026-01-30_10-33-12.html  ampm-store_ru_2026-01-30_11-25-19.html  ampm-store_ru_2026-01-30_11-27-45.html  ampm-store_ru_2026-01-30_11-27-58.html  askona_ru_184405.html  askona_ru_184424.html  askona_ru_184432.html  askona_ru_2026-01-29_13-17-25.html  askona_ru_2026-01-29_13-19-49.html  askona_ru_2026-01-29_15-17-03.html  askona_ru_2026-01-29_15-26-01.html  (+192 more)
src/use_cases/: parse_product.py
src/utils/: url_utils.py
(+30 files in other folders)
